modified:   src/app/main/pages/video-streaming/video-streaming.component.css 	modified:   src/app/main/pages/video-streaming/video-streaming.component.html 	modified:   src/app/main/pages/video-streaming/video-streaming.component.ts

--- a/src/app/main/pages/video-streaming/video-streaming.component.css
+++ b/src/app/main/pages/video-streaming/video-streaming.component.css
@@ -181,7 +181,7 @@ h2 {
     margin-bottom: 20px;
 }
 
-.title input {
+.page-jump,.title input {
     background-color: rgb(59, 59, 59);
     width: 70px;
     margin-right: 10px;
