create:   output.txt 	create:   src/app/core/models/EditCommentRequest.ts 	create:   src/app/core/services/comment.service.spec.ts 	create:   src/app/core/services/comment.service.ts 	create:   src/app/core/services/video-streaming.service.spec.ts 	create:   src/app/core/services/video-streaming.service.ts 	modified:   src/app/main/models/comment.ts 	create:   src/app/main/pages/video-streaming/database.py 	create:   src/app/main/pages/video-streaming/video-stream.ts 	modified:   src/app/main/pages/video-streaming/video-streaming.component.html 	modified:   src/app/main/pages/video-streaming/video-streaming.component.ts

--- a/src/app/main/pages/video-streaming/video-streaming.component.html
+++ b/src/app/main/pages/video-streaming/video-streaming.component.html
@@ -195,7 +195,7 @@
 </ng-template>
 
 <ng-template #comment let-index="index">
-    <div class="comment-container" [hidden]="comments[index].commenId < 0">
+    <div class="comment-container" [hidden]="comments[index].commentId < 0">
 
         <img class="avatar-comment" [src]="comments[index].imgURL">
         <p class="user-name">{{comments[index].name}}</p>
