--- a/src/app/main/pages/home/home.component.html
+++ b/src/app/main/pages/home/home.component.html
@@ -15,7 +15,7 @@
     </app-carousel>
     
     @for(album of listAlbum; track $index) {
-        <app-album [listMovie]="album.movies" [title]="album.name"></app-album>
+        <!-- <app-album [listMovie]="album.movies" [title]="album.name"></app-album> -->
     }
   
 </div>
