--- a/src/app/main/pages/profile-management/profile-management.component.css
+++ b/src/app/main/pages/profile-management/profile-management.component.css
@@ -1,25 +1,18 @@
+#logo {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  line-height: 64px;
+  margin-left: 64.5px;
+}
+
 .layout {
     display: flex;
     flex-direction: column; /* Đảm bảo layout theo cột */
     min-height: 100vh; /* Đảm bảo chiều cao tối thiểu */
   }
   
-  .header {
-    width: 100%;
-    background-color: #001529; /* Màu nền của header */
-    color: white; /* Màu chữ */
-    display: flex;
-    align-items: center;
-    padding: 0 20px; /* Padding cho header */
-  }
-  .footer {
-    width: 100%;
-    background-color: #f0f2f5; /* Màu nền của footer */
-    color: #000; /* Màu chữ của footer */
-    text-align: center; /* Căn giữa nội dung */
-    padding: 16px; /* Padding cho footer */
-    border-top: 1px solid #ddd; /* Viền phía trên của footer */
-  }
+  
   
   
   .sidebar {
