--- a/src/app/main/pages/profile-management/profile-management.component.html
+++ b/src/app/main/pages/profile-management/profile-management.component.html
@@ -1,55 +1,54 @@
 <nz-layout class="layout">
-    <nz-header class="header">
-      <!-- Nội dung header -->
-    </nz-header>
-    <nz-layout>
-      <nz-sider nzCollapsible [nzCollapsedWidth]="80" nzTheme="dark" class="sidebar">
-        <div class="logo" (click)="navigateHome()" style="height: 32px; margin: 16px; background: rgba(255, 255, 255, 0.3); cursor: pointer;">
-          <!-- Logo nội dung -->
-        </div>
-        <ul nz-menu nzMode="inline" nzTheme="dark">
-          <li nz-menu-item (click)="navigateToProfile()">
-            <span nz-icon nzType="user" nzTheme="outline"></span>
-            <span>Tài khoản</span>
-          </li>
-          <li nz-menu-item (click)="navigateToTransactionHistory()">
-            <span nz-icon nzType="file-text" nzTheme="outline"></span>
-            <span>Lịch sử giao dịch</span>
-          </li>
-          <li nz-menu-item (click)="navigateToCart()">
-            <span nz-icon nzType="shopping-cart" nzTheme="outline"></span>
-            <span>Giỏ hàng</span>
-          </li>
-          <li nz-menu-item (click)="navigateToRentalList()">
-            <span nz-icon nzType="unordered-list" nzTheme="outline"></span>
-            <span>Danh sách thuê</span>
-          </li>
-          <li nz-menu-item (click)="navigateToMailbox()">
-            <span nz-icon nzType="mail" nzTheme="outline"></span>
-            <span>Hộp thư</span>
-          </li>
-          <li nz-menu-item (click)="navigateToLoginDevices()">
-            <span nz-icon nzType="tablet" nzTheme="outline"></span>
-            <span>Thiết bị đăng nhập</span>
-          </li>
-          <li nz-menu-item (click)="navigateToFavoriteMovies()">
-            <span nz-icon nzType="heart" nzTheme="outline"></span>
-            <span>Phim yêu thích</span>
-          </li>
-          <li nz-menu-item (click)="navigateToLogout()">
-            <span nz-icon nzType="logout" nzTheme="outline"></span>
-            <span>Đăng xuất</span>
-          </li>
-        </ul>
-      </nz-sider>
-      <nz-layout class="main-layout">
-        <nz-content class="content">
-          <router-outlet></router-outlet>
-        </nz-content>
-        <nz-footer class="footer">
-          <!-- Nội dung footer (tạm thời rỗng) -->
-        </nz-footer>
-      </nz-layout>
+  <nz-layout>
+    <nz-sider nzTheme="dark" class="sidebar">
+      <div nz-col="" class="ant-col ant-col-xs-20 ant-col-sm-20 ant-col-md-20 ant-col-lg-20 ant-col-xl-3 ant-col-xxl-4">
+        <a href="#!" id="logo">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="#1890ff" class="size-12">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M3.375 19.5h17.25m-17.25 0a1.125 1.125 0 0 1-1.125-1.125M3.375 19.5h1.5C5.496 19.5 6 18.996 6 18.375m-3.75 0V5.625m0 12.75v-1.5c0-.621.504-1.125 1.125-1.125m18.375 2.625V5.625m0 12.75c0 .621-.504 1.125-1.125 1.125m1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125m0 3.75h-1.5A1.125 1.125 0 0 1 18 18.375M20.625 4.5H3.375m17.25 0c.621 0 1.125.504 1.125 1.125M20.625 4.5h-1.5C18.504 4.5 18 5.004 18 5.625m3.75 0v1.5c0 .621-.504 1.125-1.125 1.125M3.375 4.5c-.621 0-1.125.504-1.125 1.125M3.375 4.5h1.5C5.496 4.5 6 5.004 6 5.625m-3.75 0v1.5c0 .621.504 1.125 1.125 1.125m0 0h1.5m-1.5 0c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125m1.5-3.75C5.496 8.25 6 7.746 6 7.125v-1.5M4.875 8.25C5.496 8.25 6 8.754 6 9.375v1.5m0-5.25v5.25m0-5.25C6 5.004 6.504 4.5 7.125 4.5h9.75c.621 0 1.125.504 1.125 1.125m1.125 2.625h1.5m-1.5 0A1.125 1.125 0 0 1 18 7.125v-1.5m1.125 2.625c-.621 0-1.125.504-1.125 1.125v1.5m2.625-2.625c.621 0 1.125.504 1.125 1.125v1.5c0 .621-.504 1.125-1.125 1.125M18 5.625v5.25M7.125 12h9.75m-9.75 0A1.125 1.125 0 0 1 6 10.875M7.125 12C6.504 12 6 12.504 6 13.125m0-2.25C6 11.496 5.496 12 4.875 12M18 10.875c0 .621-.504 1.125-1.125 1.125M18 10.875c0 .621.504 1.125 1.125 1.125m-2.25 0c.621 0 1.125.504 1.125 1.125m-12 5.25v-5.25m0 5.25c0 .621.504 1.125 1.125 1.125h9.75c.621 0 1.125-.504 1.125-1.125m-12 0v-1.5c0-.621-.504-1.125-1.125-1.125M18 18.375v-5.25m0 5.25v-1.5c0-.621.504-1.125 1.125-1.125M18 13.125v1.5c0 .621.504 1.125 1.125 1.125M18 13.125c0-.621.504-1.125 1.125-1.125M6 13.125v1.5c0 .621-.504 1.125-1.125 1.125M6 13.125C6 12.504 5.496 12 4.875 12m-1.5 0h1.5m-1.5 0c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125M19.125 12h1.5m0 0c.621 0 1.125.504 1.125 1.125v1.5c0 .621-.504 1.125-1.125 1.125m-17.25 0h1.5m14.25 0h1.5" />
+          </svg>
+          <strong class="text-[#1890ff]">UTEPlay</strong>
+        </a>
+      </div>
+      <ul nz-menu nzMode="inline" nzTheme="dark">
+        <li nz-menu-item (click)="navigateToProfile()">
+          <span nz-icon nzType="user" nzTheme="outline"></span>
+          <span>Tài khoản</span>
+        </li>
+        <li nz-menu-item (click)="navigateToTransactionHistory()">
+          <span nz-icon nzType="file-text" nzTheme="outline"></span>
+          <span>Lịch sử giao dịch</span>
+        </li>
+        <li nz-menu-item (click)="navigateToCart()">
+          <span nz-icon nzType="shopping-cart" nzTheme="outline"></span>
+          <span>Giỏ hàng</span>
+        </li>
+        <li nz-menu-item (click)="navigateToRentalList()">
+          <span nz-icon nzType="unordered-list" nzTheme="outline"></span>
+          <span>Danh sách thuê</span>
+        </li>
+        <li nz-menu-item (click)="navigateToMailbox()">
+          <span nz-icon nzType="mail" nzTheme="outline"></span>
+          <span>Hộp thư</span>
+        </li>
+        <li nz-menu-item (click)="navigateToLoginDevices()">
+          <span nz-icon nzType="tablet" nzTheme="outline"></span>
+          <span>Thiết bị đăng nhập</span>
+        </li>
+        <li nz-menu-item (click)="navigateToFavoriteMovies()">
+          <span nz-icon nzType="heart" nzTheme="outline"></span>
+          <span>Phim yêu thích</span>
+        </li>
+        <li nz-menu-item (click)="navigateToLogout()">
+          <span nz-icon nzType="logout" nzTheme="outline"></span>
+          <span>Đăng xuất</span>
+        </li>
+      </ul>
+    </nz-sider>
+    <nz-layout class="main-layout">
+      <nz-content class="content">
+        <router-outlet></router-outlet>
+      </nz-content>
+      
     </nz-layout>
   </nz-layout>
-  
+</nz-layout>
