update: badage in header

--- a/src/app/layouts/main/main-header/main-header.component.html
+++ b/src/app/layouts/main/main-header/main-header.component.html
@@ -62,8 +62,8 @@
           </li>  
           <!-- Cart -->
           <li class="icon">
-            <a href="#">
-              <nz-badge [nzCount]="5">
+            <a routerLink="me/cart">
+              <nz-badge [nzCount]="cartQuantity">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
                 </svg>
@@ -72,8 +72,8 @@
           </li>  
           <!-- Notification -->
           <li class="icon">
-            <a href="#">
-              <nz-badge [nzCount]="5">
+            <a routerLink="me/mailbox">
+              <nz-badge [nzCount]="notificationQuantity">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
                 </svg>
@@ -107,7 +107,7 @@
           <nz-dropdown-menu #menu="nzDropdownMenu">
             <ul nz-menu nzSelectable>
               <li nz-menu-item>
-                <a class="text-black" routerLink="me">Hồ sơ</a>
+                <a class="text-black" routerLink="me/account">Hồ sơ</a>
               </li>
               <li nz-menu-item>2nd menu item</li>
               <li nz-menu-item>3rd menu item</li>
