modified:   src/app/auth/login/login.component.html

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -47,7 +47,7 @@
                 <!-- Social media login buttons -->
                 <div class="font-montserrat social-container">
                     <a href=
-                    "hoctuancustomservice.io.vn/oauth2/authorize/google" class="social">
+                    "https://hoctuancustomservice.io.vn/oauth2/authorize/google" class="social">
                         <i class="fa-brands fa-google" style="font-size:24px"></i>
                     </a>
                 </div>
